# CleanerRobots

rch/: CHANGELOG.md  rch.cabal  t.hs
rch/app/: Config.hs  Kids.hs  Main.hs  Robots.hs  Utils.hs  World.hs
