cabal-version:      2.4
name:               rch
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             dgd
maintainer:         guatydavid@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


library
  -- exposed-modules:
  other-modules: 
    Utils,
    World,
    Kids,
    Robots,
    Config
  -- other-extensions:
  build-depends: base ^>=4.14.3.0, random, mtl>=2.2.2, containers
  hs-source-dirs: app
  default-language:    Haskell2010

executable rch
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Utils,
        World,
        Kids,
        Robots,
        Config
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0, random, mtl>=2.2.2, containers
    hs-source-dirs:   app
    default-language: Haskell2010

Environment 
  -- other-extensions:
  build-depends: base ^>=4.14.3.0, random, mtl>=2.2.2, containers
  -- hs-source-dirs:
  default-language:    Haskell2010